# ActivityWatcher

./: README.md  run_client.lnk  server_ip.txt  start_client.lnk
client/: CMakeLists.txt
client/ActivityWatcherCMake/: ActivityWatcherCMake.cpp  CMakeLists.txt  base64.cpp  base64.h
server/: index.html  main.py  requirments.txt
